--- a/demo/src/main/res/layout/demo_indicator_trick1.xml
+++ b/demo/src/main/res/layout/demo_indicator_trick1.xml
@@ -11,13 +11,14 @@
   app:stl_defaultTabTextHorizontalPadding="18dp"
   app:stl_dividerColor="@color/transparent"
   app:stl_dividerThickness="0dp"
-  app:stl_indicatorColor="@color/black_20"
-  app:stl_indicatorCornerRadius="18dp"
+    app:stl_indicatorColors="@array/custom_tab_colors"
+    app:stl_indicatorCornerRadius="18dp"
   app:stl_indicatorGravity="center"
-  app:stl_indicatorInterpolation="smart"
+  app:stl_indicatorInterpolation="linear"
   app:stl_indicatorThickness="36dp"
-  app:stl_underlineColor="@color/transparent"
+    app:stl_indicatorAlwaysInCenter="true"
+    app:stl_underlineColor="@color/transparent"
   app:stl_underlineThickness="0dp"
-  />
+    />
 
 
