--- a/demo/src/main/res/layout/demo_indicator_trick1.xml
+++ b/demo/src/main/res/layout/demo_indicator_trick1.xml
@@ -1,24 +1,26 @@
 <com.ogaclejapan.smarttablayout.SmartTabLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@id/viewpagertab"
-  android:layout_width="match_parent"
-  android:layout_height="@dimen/tab_height"
-  android:clipToPadding="false"
-  android:paddingLeft="4dp"
-  android:paddingRight="4dp"
-  app:stl_defaultTabTextColor="@color/white"
-  app:stl_defaultTabTextHorizontalPadding="18dp"
-  app:stl_dividerColor="@color/transparent"
-  app:stl_dividerThickness="0dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@id/viewpagertab"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/tab_height"
+    android:background="@color/white"
+    android:clipToPadding="false"
+    android:paddingLeft="4dp"
+    android:paddingRight="4dp"
+    app:stl_defaultTabTextColor="@color/black"
+    app:stl_defaultTabTextHorizontalPadding="18dp"
+    app:stl_selectedTabTextColor="@color/white"
+    app:stl_dividerColor="@color/transparent"
+    app:stl_dividerThickness="0dp"
     app:stl_indicatorColors="@array/custom_tab_colors"
     app:stl_indicatorCornerRadius="18dp"
-  app:stl_indicatorGravity="center"
-  app:stl_indicatorInterpolation="linear"
-  app:stl_indicatorThickness="36dp"
+    app:stl_indicatorGravity="center"
+    app:stl_indicatorInterpolation="linear"
+    app:stl_indicatorThickness="36dp"
     app:stl_indicatorAlwaysInCenter="true"
     app:stl_underlineColor="@color/transparent"
-  app:stl_underlineThickness="0dp"
+    app:stl_underlineThickness="0dp"
     />
 
 
